builds, but no pkg_config

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,7 +52,7 @@ macro(configure_target_interface_lib target)
         target_include_directories(${target} INTERFACE
                 $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                 $<INSTALL_INTERFACE:include>)
-
+        #target_link_libraries(${target} PUBLIC inotify-filesystem-adapter)
 endmacro(configure_target_interface_lib)
 
 # add export for adapter
@@ -62,15 +62,19 @@ configure_target_interface_lib(inotify-filesystem-adapter)
 
 # library definition
 if(BUILD_SHARED_LIBS)
-        add_library(${LIB_NAME} SHARED ${LIB_SRCS} ${LIB_HEADER})
-        configure_target(${LIB_NAME})
+        add_library(${LIB_NAME}-shared SHARED ${LIB_SRCS} ${LIB_HEADER})
+        list(APPEND PACKAGE_LIBRARIES ${LIB_NAME})
+
+        configure_target(${LIB_NAME}-shared)
         if(NOT BUILD_STATIC_LIBS)
-                add_library(${LIB_COMPANY}::${LIB_NAME} ALIAS ${LIB_NAME})
+                add_library(${LIB_COMPANY}::${LIB_NAME} ALIAS ${LIB_NAME}-shared)
         endif()
 endif()
 
 if(BUILD_STATIC_LIBS)
         add_library(${LIB_NAME}-static STATIC ${LIB_SRCS} ${LIB_HEADER})
+        #list(APPEND PACKAGE_LIBRARIES ${LIB_NAME}-static)
+
         configure_target(${LIB_NAME}-static)
         if(NOT BUILD_SHARED_LIBS)
                 add_library(${LIB_COMPANY}::${LIB_NAME} ALIAS ${LIB_NAME}-static)
@@ -78,7 +82,8 @@ if(BUILD_STATIC_LIBS)
 endif()
 
 if(BUILD_SHARED_LIBS AND BUILD_STATIC_LIBS)
-        add_library(${LIB_COMPANY}::${LIB_NAME} ALIAS ${LIB_NAME})
+        add_library(${LIB_COMPANY}::${LIB_NAME} ALIAS ${LIB_NAME}-shared)
+        list(APPEND PACKAGE_LIBRARIES ${LIB_NAME})
 endif()
 
 install(DIRECTORY ${CMAKE_INSTALL_INCLUDEDIR}/${LIB_NAME} DESTINATION include)
@@ -94,6 +99,8 @@ configure_package_config_file(
 install(FILES "${PROJECT_BINARY_DIR}/${LIB_NAME}ConfigVersion.cmake"
         "${PROJECT_BINARY_DIR}/${LIB_NAME}Config.cmake"
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${LIB_NAME})
+
+export(EXPORT ${PROJECT_NAME}-sharedTargets FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Targets.cmake)
 
 # install(FILES ${LIB_NAME}Config.cmake ${CMAKE_CURRENT_BINARY_DIR}/${LIB_NAME}ConfigVersion.cmake
 #         DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${LIB_NAME})
@@ -116,6 +123,9 @@ install(FILES "${PROJECT_BINARY_DIR}/${LIB_NAME}ConfigVersion.cmake"
               "${PROJECT_BINARY_DIR}/${LIB_NAME}Config.cmake"
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${LIB_NAME})
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ DESTINATION include)
+
+install(FILES ${PROJECT_SOURCE_DIR}/package.xml DESTINATION share/${PROJECT_NAME})
+
 
 # ament_export_include_directories(${PROJECT_SOURCE_DIR}/include)
 
